= Parceler Changelog

== Upcoming Release

== Release 1.1.11 (2017-06-28)

Enhancements::
  * Added gradle specific incremental annotation processing.

Bug Fixes::
  * Fixes issue with Parcels utility class classloader reference.

== Release 1.1.10 (2018-12-30)

Bug Fixes::
  * Fixes issue accessing collections with generics in separate packages via package helpers.

== Release 1.1.9 (2017-06-27)

Enhancements::
  * Added support for `MutableLiveData`.
  
Bug Fixes::
  * Fixed issue unrolling generic collections.

== Release 1.1.8 (2017-05-08)

Bug Fixes::
  * Fixes issue with MapUtil.initialHashMapCapacity accessibility

== Release 1.1.7 (2017-05-07)

Ehancements::
  * Support for Kotlin transient.
  * Better generic support. 

== Release 1.1.6 (2016-10-22)

Enhancements::
  * Added supported options to annotation processor.
  * Changed Parcelable implementations use CREATOR directly.
  * Added describeContents option on `@Parcel` to set generated return value to `describeContents()` method.
  * Changed CREATOR to anonymous inner class.
  * Added ObservableField serialization support.

Bug Fixes::
  * Fixes issue reading identical objects within the same bean.
  * Fixes issue associating read and write property types, now they must be identical.

== Release 1.1.5 (2016-05-25)

Bug Fixes::
  * Fixes issue with using non-local target classes' classloader.
  * Fixes issue with checking Parcelable inheritance.

== Release 1.1.4 (2016-05-16)

Bug Fixes::
  * Re-implemented implementation parameter.
  * Fixed identity handling in object graphs by using list instead of map.

== Release 1.1.3 (2016-05-14)

Bug Fixes::
  * Fixed identity handling by using IdentityCollection.

Depreciations::
  * Removed METHOD serialization strategy.
  * Removed `parcelsIndex` configuration option on `Parcel` annotation.

== Release 1.1.2 (2016-04-30)

Bug Fixes::
  * Fixed issue generating Parcelable classes from the output of other annotation processors.

== Release 1.1.1 (2016-04-11)
