@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.parceler</groupId>
         <artifactId>parceler-examples</artifactId>
-        <version>1.1.10-SNAPSHOT</version>
+        <version>1.1.12-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
